--- a/apps/server/Cargo.toml
+++ b/apps/server/Cargo.toml
@@ -2,9 +2,21 @@
 name = "apps"
 version = "0.1.0"
 edition = "2021"
+authors = ["Jorge Pardo"]
 
 [dependencies]
 actix-cors = "0.7.0"
 actix-web = "4.9.0"
+diesel = { version = "2.2.4", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
+diesel_migrations = "2.2.0"
 env_logger = "0.11.5"
+libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
+rand = "0.8.5"
 serde = { version = "1.0.214", features = ["derive"] }
+
+[profile.release]
+panic = "abort"
+codegen-units = 1
+lto = true
+opt-level = 3
+strip = true
